added api to update project details used path aliasing updated doc
references #8
